# GraphRAG-for-HealthCareAI

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  knowledge_graph_raw_mode.json  pyproject.toml  requirements.txt
data/: chiathanya.txt
src/: Graph_builder.py  agent_simple.py  app.py  data_processors.py  gemini.py  knowledge_graph_raw_mode.json  neo4j_utils.py
tests/: test_agent_simple.py  test_app_integration.py  test_data_processors.py  test_graph_builder.py  test_neo4j_utils.py
